SCSS oluşumu ve ufak hataları düzeltme

--- a/belgeler/kap-orgusu/konumlama.html
+++ b/belgeler/kap-orgusu/konumlama.html
@@ -137,55 +137,55 @@ title: Kap Örgüsü Konumlama
 <p></p>
 
 
-<h3>Konumlama: <span data-metin="dikkat">ger | yay</span></h3>
-<p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
-<p>"yay" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
+<h3>Konumlama: <span data-metin="dikkat">geniş-aralıklı | aralıklı</span></h3>
+<p>"geniş-aralıklı" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
+<p>"aralıklı" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
-  <div data-gnl="1 1p ger">
+  <div data-gnl="1 1p geniş-aralıklı">
     <div data-gnl="1 8p">
-      ger
+      geniş-aralıklı
     </div>
     <div data-gnl="1 8p">
-      ger
+      geniş-aralıklı
     </div>
     <div data-gnl="1 8p">
-      ger
+      geniş-aralıklı
     </div>
   </div>
-  <div data-gnl="1 1p yay">
+  <div data-gnl="1 1p aralıklı">
     <div data-gnl="1 8p">
-      yay
+      aralıklı
     </div>
     <div data-gnl="1 8p">
-      yay
+      aralıklı
     </div>
     <div data-gnl="1 8p">
-      yay
+      aralıklı
     </div>
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 1p ger&quot;&gt;
+&lt;div data-gnl=&quot;1 1p geniş-aralıklı&quot;&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    ger
+    geniş-aralıklı
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    ger
+    geniş-aralıklı
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    ger
+    geniş-aralıklı
   &lt;/div&gt;
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 1p yay&quot;&gt;
+&lt;div data-gnl=&quot;1 1p aralıklı&quot;&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    yay
+    aralıklı
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    yay
+    aralıklı
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 8p&quot;&gt;
-    yay
+    aralıklı
   &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
