--- a/belgeler/kap-orgusu/parca-duzeni.html
+++ b/belgeler/kap-orgusu/parca-duzeni.html
@@ -8,7 +8,7 @@ title: Kap Örgüsü Parça Düzeni
     .önizleme h3 {color:#999;margin:0 0 10px 0;}
     pre.language-html{ max-height:50vh; overflow-y: auto;}
   </style>
-  <p>Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı yüzdesel genişliklerle şablonlar oluşturmanız için hazırlanmıştır. Tek parçadan yani 1 parçadan 24 parçaya kadar tüm parça düzenlerini kullanıma sunar. "<span data-metin="ana">SAYI SAYIp</span>" değerleri html dosyasında istenilen ekran örgüsüne yazılarak kullanılır. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için data-gnl="2 3p" data-gnl="1 3p" değerlerini tanımlaybilirsiniz.</p>
+  <p>Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı yüzdesel genişliklerle şablonlar oluşturmanız için hazırlanmıştır. Tek parçadan yani 1 parçadan 24 parçaya kadar tüm parça düzenlerini kullanıma sunar. "<span data-metin="ana">SAYI SAYIp</span>" değerleri html dosyasında istenilen ekran örgüsüne yazılarak kullanılır. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için <a href="/belgeler/ekran-orgusu.html">data-gnl</a>="2 3p" <a href="/belgeler/ekran-orgusu.html">data-gnl</a>="1 3p" değerlerini tanımlaybilirsiniz.</p>
 
   <h3>Parça Düzeni Nasıl Kullanılır?</h3>
   <p>Dilediğimiz parça düzenini kullanmaya başlamadan önce örnek bir şablonu hayal edelim. Bir çalışmamız 3 eşit genişliğe parçalanmış olsun, bir çalışmamızda 20 parça düzeni kullanılarak kendi aralarında farklı genişliklere sahip 3 sütun şeklinde olsun. İlk örneğimizi "1 3p" değerini uygun yerlere yazarak yapabiliriz. Diğerini ise "3 20p", "10 20p", "7 20p" olarak hazırlayalım.</p>
@@ -92,13 +92,13 @@ title: Kap Örgüsü Parça Düzeni
   <pre data-gnl="1 1p"><code class="language-html">
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
     &lt;div data-gnl=&quot;1g&quot;&gt;
-      1o
+      1g
     &lt;/div&gt;
     &lt;div data-gnl=&quot;4g&quot;&gt;
-      4o
+      4g
     &lt;/div&gt;
     &lt;div data-gnl=&quot;2g&quot;&gt;
-      2o
+      2g
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;div data-gnl=&quot;1 1p&quot;&gt;
