--- a/belgeler/kap-orgusu/parca-duzeni.html
+++ b/belgeler/kap-orgusu/parca-duzeni.html
@@ -14,7 +14,7 @@ title: Kap Örgüsü Parça Düzeni
   <p>Dilediğimiz parça düzenini kullanmaya başlamadan önce örnek bir şablonu hayal edelim. Bir çalışmamız 3 eşit genişliğe parçalanmış olsun, bir çalışmamızda 20 parça düzeni kullanılarak kendi aralarında farklı genişliklere sahip 3 sütun şeklinde olsun. İlk örneğimizi "1 3p" değerini uygun yerlere yazarak yapabiliriz. Diğerini ise "3 20p", "10 20p", "7 20p" olarak hazırlayalım.</p>
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
-    <h3>Önizleme: Örnek 2</h3>
+    <h3>Önizleme: Örnek 1</h3>
     <div data-gnl="1 3p">
       1 3p
     </div>
@@ -49,6 +49,48 @@ title: Kap Örgüsü Parça Düzeni
     </div>
   </div>
   <pre data-gnl="1 1p"><code class="language-html">
+  &lt;div data-gnl=&quot;3 20p&quot;&gt;
+    3 20p
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;10 20p&quot;&gt;
+    10 20p
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;7 20p&quot;&gt;
+    7 20p
+  &lt;/div&gt;
+  </code></pre>
+  <div data-gnl="1 1p" class="önizleme">
+    <h3>Önizleme: Örnek 3</h3>
+    <p>Örnek 1 ve 2'yi bir arada işlemek</p>
+    <div data-gnl="1 3p">
+      1 3p
+    </div>
+    <div data-gnl="1 3p">
+      1 3p
+    </div>
+    <div data-gnl="1 3p">
+      1 3p
+    </div>
+    <div data-gnl="3 20p">
+      3 20p
+    </div>
+    <div data-gnl="10 20p">
+      10 20p
+    </div>
+    <div data-gnl="7 20p">
+      7 20p
+    </div>
+  </div>
+  <pre data-gnl="1 1p"><code class="language-html">
+  &lt;div data-gnl=&quot;1 3p&quot;&gt;
+    1 3p
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;1 3p&quot;&gt;
+    1 3p
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;1 3p&quot;&gt;
+    1 3p
+  &lt;/div&gt;
   &lt;div data-gnl=&quot;3 20p&quot;&gt;
     3 20p
   &lt;/div&gt;
