--- a/belgeler/kap-orgusu/parca-duzeni.html
+++ b/belgeler/kap-orgusu/parca-duzeni.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Kap Örgüsü Parça Düzeni
+title: Parça Düzeni
 ---
   <style media="screen">
     .önizleme{background-color:#efefef; padding:10px;}
@@ -10,7 +10,10 @@ title: Kap Örgüsü Parça Düzeni
   </style>
   <p>Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı yüzdesel genişliklerle şablonlar oluşturmanız için hazırlanmıştır. Tek parçadan yani 1 parçadan 24 parçaya kadar tüm parça düzenlerini kullanıma sunar. "<span data-metin="ana">SAYI SAYIp</span>" değerleri html dosyasında istenilen ekran örgüsüne yazılarak kullanılır. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için <a href="/belgeler/ekran-orgusu.html">data-gnl</a>="2 3p" <a href="/belgeler/ekran-orgusu.html">data-gnl</a>="1 3p" değerlerini tanımlaybilirsiniz.</p>
 
-  <h3>Parça Düzeni Nasıl Kullanılır?</h3>
+  <h3>Parça Düzeni "SAYI SAYIp" Kullanım Yöntemi</h3>
+
+  <p>Bu kavramı kullanarak bir kap parça düzeni yazdığınız anda tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölerek SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
+
   <p>Dilediğimiz parça düzenini kullanmaya başlamadan önce örnek bir şablonu hayal edelim. Bir çalışmamız 3 eşit genişliğe parçalanmış olsun, bir çalışmamızda 20 parça düzeni kullanılarak kendi aralarında farklı genişliklere sahip 3 sütun şeklinde olsun. İlk örneğimizi "1 3p" değerini uygun yerlere yazarak yapabiliriz. Diğerini ise "3 20p", "10 20p", "7 20p" olarak hazırlayalım.</p>
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
@@ -99,6 +102,72 @@ title: Kap Örgüsü Parça Düzeni
   &lt;/div&gt;
   &lt;div data-gnl=&quot;7 20p&quot;&gt;
     7 20p
+  &lt;/div&gt;
+  </code></pre>
+  <p></p>
+
+  <h3>"SAYI SAYIp" >> "SAYI SAYIp" Kullanım Yöntemi</h3>
+
+  <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Aynı zamanda ana html etiketinde belirttiğim SAYI ana html etiketimin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim etiketin parça düzeni olurken SAYI değeride ana HTML etiketiyle ilişkisini kesip bu etiketteki parça düzenine göre genişliği etkileyecektir. Ve bu HTML etiketin yavru etiketleri varsa onların varsayılan parça düzeni olacaktır."</p>
+  <p></p>
+  <div data-gnl="1 1p" class="önizleme">
+    <h3>Önizleme</h3>
+    <div data-gnl="2 2p">
+      <div data-gnl="1 4p">
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      </div>
+      <div data-gnl="1 4p">
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      </div>
+      <div data-gnl="1 4p">
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      </div>
+      <div data-gnl="1 4p">
+        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+      </div>
+    </div>
+  </div>
+  <pre data-gnl="1 1p"><code class="language-html">
+  &lt;div data-gnl=&quot;2 2p&quot;&gt;
+    &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+    &lt;/div&gt;
+  &lt;/div&gt;
+  </code></pre>
+  <p></p>
+
+  <h3>"SAYI SAYIp" > "SAYI" Kullanım Yöntemi</h3>
+
+  <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."<span data-metin="dikkat"> Uyarı: Eski internet tarayıcılarını önemseyerek oluşturduğunuz çalışmalarınızda bu yöntem bazı şartları aşması durumunda istenildiği gibi çalışmayabilir. Bu yüzden eski tarayıcıları önemsiyorsanız her zaman "SAYI SAYIp" tanımlaması yaparak kullanılmanızı tavsiye ederiz.</span></p>
+  <p></p>
+  <div data-gnl="1 1p" class="önizleme">
+    <h3>Önizleme</h3>
+    <div data-gnl="2 2p">
+      <div data-gnl="1">
+        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      </div>
+      <div data-gnl="1">
+        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+      </div>
+    </div>
+  </div>
+  <pre data-gnl="1 1p"><code class="language-html">
+  &lt;div data-gnl=&quot;2 2p&quot;&gt;
+    &lt;div data-gnl=&quot;1&quot;&gt;
+      Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+    &lt;/div&gt;
+    &lt;div data-gnl=&quot;1&quot;&gt;
+      Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+    &lt;/div&gt;
   &lt;/div&gt;
   </code></pre>
   <p></p>
