--- a/belgeler/kap-orgusu/parca-duzeni.html
+++ b/belgeler/kap-orgusu/parca-duzeni.html
@@ -12,7 +12,7 @@ title: Parça Düzeni
 
   <h3>Parça Düzeni "SAYI SAYIp" Kullanım Yöntemi</h3>
 
-  <p>Bu kavramı kullanarak bir kap parça düzeni yazdığınız anda tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölerek SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
+  <p>Kap oluşturmak için bir parça düzeni yazdığınız an tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölerek SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
 
   <p>Dilediğimiz parça düzenini kullanmaya başlamadan önce örnek bir şablonu hayal edelim. Bir çalışmamız 3 eşit genişliğe parçalanmış olsun, bir çalışmamızda 20 parça düzeni kullanılarak kendi aralarında farklı genişliklere sahip 3 sütun şeklinde olsun. İlk örneğimizi "1 3p" değerini uygun yerlere yazarak yapabiliriz. Diğerini ise "3 20p", "10 20p", "7 20p" olarak hazırlayalım.</p>
   <p></p>
@@ -108,7 +108,7 @@ title: Parça Düzeni
 
   <h3>"SAYI SAYIp" >> "SAYI SAYIp" Kullanım Yöntemi</h3>
 
-  <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Aynı zamanda ana html etiketinde belirttiğim SAYI ana html etiketimin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim etiketin parça düzeni olurken SAYI değeride ana HTML etiketiyle ilişkisini kesip bu etiketteki parça düzenine göre genişliği etkileyecektir. Ve bu HTML etiketin yavru etiketleri varsa onların varsayılan parça düzeni olacaktır."</p>
+  <p>Bu düzeni kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Ana html etiketinde belirttiğim SAYIp yavru etiketlerin varsayılan değeri haline gelmiştir. Aynı zamanda ana etikette belirttiğim SAYI etiketin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzenine göre ölçeklenecektir. Yavru etiketlerde SAYI yazarak genişliklerimi belirtebilirim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim değer etiketin yeni parça düzeni olurken SAYI değeri de yeni düzenin parça miktarı olacaktır."</p>
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme</h3>
@@ -147,7 +147,7 @@ title: Parça Düzeni
 
   <h3>"SAYI SAYIp" > "SAYI" Kullanım Yöntemi</h3>
 
-  <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."<span data-metin="dikkat"> Uyarı: Eski internet tarayıcılarını önemseyerek oluşturduğunuz çalışmalarınızda bu yöntem bazı şartları aşması durumunda istenildiği gibi çalışmayabilir. Bu yüzden eski tarayıcıları önemsiyorsanız her zaman "SAYI SAYIp" tanımlaması yaparak kullanılmanızı tavsiye ederiz.</span></p>
+  <p>Bu düzeni kullanarak bir kap yazdığınız an tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim." <span data-metin="dikkat">Uyarı: Eski internet tarayıcılarını önemseyerek oluşturduğunuz çalışmalarınızda bu yöntem bazı şartları aşması durumunda istenildiği gibi çalışmayabilir. Bu yüzden eski tarayıcıları önemsiyorsanız her zaman "SAYI SAYIp" tanımlaması yaparak kullanılmanızı tavsiye ederiz.</span></p>
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme</h3>
