--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -5,102 +5,32 @@ title: Kap Örgüsü
 
     <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.91)</span></h1>
 
-    <p>İşte bu! Çoklu kap örgüsü (multi-grid system) ile tek düzene bağlı kalmaktan kurtulun. Aynı sayfa içinde 1'den 24'e kadar desteklenen kap düzenlerini dilediğiniz an, dilediğiniz yerde ve dilediğiniz ekran ölçeğiyle kullanın.</p>
+    <p>
+      İşte bu! Çoklu kap örgüsü (multi-grid system) ile tek düzene bağlı kalmaktan
+      kurtuluşa bakıyorsunuz. Tasarımlarınızı dökerken aynı anda 12'li, 16'lı, 24'lü
+      veya 1'den 24'e kadar herhangi bir düzeni kullanmak istemez misiniz? Nasıl yani
+      dediğinizi duyar gibiyiz. Başka önyüz çatıları sizi tek ölçek üzerinden
+      tasarımlarınızı oluşturmaya mahkum kılmaktadır. Bu nedenle tam olarak istediğinize
+      erişmek her zaman mümkün olmamakla birlikte özel dokunuşlar yapmak durumunda
+      olursunuz. Deveb özgürlük alanınızı çok fazla genişletti. Kap örgüsüne hoş geldiniz!<br><br>
+
+      Aynı sayfa içinde 1'den 24'e kadar desteklenen kap düzenlerini dilediğiniz an, dilediğiniz yerde ve dilediğiniz ekran ölçeğiyle kullanın. Yalnız söylememiz gerekiyor. Şu ana kadar bahsettiğimiz kap örgüsünün parça düzeniydi. Diğer özelliklerini incelediğinizde ne kadar zengin bir özellikte olduğunu fark edeceksiniz.</p>
 
     <h2>Kap Örgüsü Nedir, Nasıl Kullanılır?</h2>
 
-    <p>Kap örgüsü (İngilizce olarak "grid system") kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap" sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan demektir. Kendisine özgü kullanımıyla 1'den 24'e kadar kap düzeni oluşturabildiğiniz bu örgüde gerekli kullanım bilgilerini belgenin devamında bulacaksınız.</p>
+    <p>Kap örgüsü kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap" sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan nesne demektir. Deveb'in kap örgüsü, kendisine özgü kullanımıyla ilk başta anlaşılmaz gibi duracak. Ancak bir kere anladığınızda işler eskisi gibi olmayacak.</p>
+    <p>Kap örgüsü, parça düzeni ve genleşme düzeni olmak üzere iki ana düzenden oluşur. Bu düzenler kendilerine özgü özellikleri ile tasarımcının tercihine bırakılmış düzenlerdir. Bunların yanında sıralama özelliği, konumlama özelliği, gizleme özelliği gibi özelliklerde sizi bekliyor.</p>
 
-    <p>Kap örgüsünü doğru şekilde kullanabilmek için "<span data-metin="dikkat">SAYI SAYIp</span>" öğrenelim.</p>
+    <p>O halde kap örgüsünü keşfetmeye başlayalım. İlk olarak parça düzeninden başlayalım. Çünkü her yerde ihtiyaç duyacağını en önemli özellik.</p>
 
-    <h3>"SAYI SAYIp" Kullanım Yöntemi</h3>
+    <p>Parça düzeni yüzdesel oranlarda kararlı genişlik ölçüleri tanımlamanıza yardımcıdır. Ekranı satırlar olarak kurgulamak zorunda değilsiniz. Kap kavramını oturttukça dilediğiniz yönde kurgularınızı oluşturabilirsiniz. Parça düzeni ile oluşturacağınız kaplar nasıl bir özellikte olduğunu anında kendini size gösterecek. Hazırsanız <a href="/belgeler/kap-orgusu/parca-duzeni.html">parça düzeni</a> belgelerini okuyarak ayrıntılı bilgiler edinin.</p>
+    <p>Genleşme düzenine gelince. Bu düzende yüzdesel oranlarda çalışmaktadır. Ancak html nesnesinin kenarlarından içe veya dışa doğru mesafe koymak istediğinizde hesaplar biraz değişir. Bunun yanı sıra satırsal olarak çalışmalısınız. Yani genleşme düzenini kullanırken bir başka bölüm alttan devam etsin gibi bir isteğiniz olursa farklı yöntemlere başvurmanız gerekecektir. Daha derinlemesine <a href="/belgeler/kap-orgusu/genlesme-duzeni.html">genleşme düzenini</a> inceleyin. Genleşme düzeni ve parça düzeni kıyasına bakmayı unutmayın.</p>
 
-    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölüm SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
-    <p></p>
-    <div data-gnl="1 1p" class="önizleme">
-      <h3>Önizleme</h3>
-      <div data-gnl="1 2p">
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      </div>
-      <div data-gnl="1 2p">
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      </div>
-    </div>
-    <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;1 2p&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 2p&quot;&gt;
-      Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-    &lt;/div&gt;
-    </code></pre>
-    <p></p>
+    <p>Konumlama özelliği kap örgüsünün en çok kullanılan özelliğidir. Konumlama çalışmalarınızı yaparken size sunduğu olanakların işinizi ne kadar kolaylaştırdığını görmeniz güç değil. Ayrıntıları incelerken her şeyi ilk seferde fark edeceğinizden konuyu fazla uzatmıyor ve <a href="/belgeler/kap-orgusu/konumlama.html">konumlama sayfasına</a> yönlendiriyoruz.</p>
 
-    <h3>"SAYI SAYIp" >> "SAYI SAYIp" Kullanım Yöntemi</h3>
+    <p>Sıralama özelliği kap örgüsünün ilginç bir özelliğidir. Günümüzde display:flex ile gelen özelliklerden biridir. Aslında bunun geçmişi biraz daha uzundur ancak kabul edilir derecede yaygınlaşması nedeniyle birçok kişi için yenidir. Mesela geniş ekranlarda yan yana duran iki nesnenin dar ekranlarda alt alta durmasını sağladınız ama alttaki aslında üstte durmalı diye karar verdiniz. Nasıl yapacaksınız? İşte sıralama özelliği burada yardımınıza koşuyor. Ayrıntılar için <a href="/belgeler/kap-orgusu/siralama.html">sıralama sayfasını</a> inceleyebilirsiniz. </p>
 
-    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Aynı zamanda ana html etiketinde belirttiğim SAYI ana html etiketimin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim etiketin parça düzeni olurken SAYI değeride ana HTML etiketiyle ilişkisini kesip bu etiketteki parça düzenine göre genişliği etkileyecektir. Ve bu HTML etiketin yavru etiketleri varsa onların varsayılan parça düzeni olacaktır."</p>
-    <p></p>
-    <div data-gnl="1 1p" class="önizleme">
-      <h3>Önizleme</h3>
-      <div data-gnl="2 2p">
-        <div data-gnl="1 4p">
-          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-        </div>
-        <div data-gnl="1 4p">
-          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-        </div>
-        <div data-gnl="1 4p">
-          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-        </div>
-        <div data-gnl="1 4p">
-          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-        </div>
-      </div>
-    </div>
-    <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;2 2p&quot;&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-    &lt;/div&gt;
-    </code></pre>
-    <p></p>
 
-    <h3>"SAYI SAYIp" > "SAYI" Kullanım Yöntemi</h3>
-
-    <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim."<span data-metin="dikkat"> Uyarı: Eski internet tarayıcılarını önemseyerek oluşturduğunuz çalışmalarınızda bu yöntem bazı şartları aşması durumunda istenildiği gibi çalışmayabilir. Bu yüzden eski tarayıcıları önemsiyorsanız her zaman "SAYI SAYIp" tanımlaması yaparak kullanılmanızı tavsiye ederiz.</span></p>
-    <p></p>
-    <div data-gnl="1 1p" class="önizleme">
-      <h3>Önizleme</h3>
-      <div data-gnl="2 2p">
-        <div data-gnl="1">
-          Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-        </div>
-        <div data-gnl="1">
-          Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-        </div>
-      </div>
-    </div>
-    <pre data-gnl="1 1p"><code class="language-html">
-    &lt;div data-gnl=&quot;2 2p&quot;&gt;
-      &lt;div data-gnl=&quot;1&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1&quot;&gt;
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      &lt;/div&gt;
-    &lt;/div&gt;
-    </code></pre>
-    <p></p>
 
 <style media="screen">
   .önizleme{background-color:#efefef; padding:10px;}
