--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -23,11 +23,16 @@ title: Kap Örgüsü
 
     <p>O halde kap örgüsünü keşfetmeye başlayalım. İlk olarak parça düzeninden başlayalım. Çünkü her yerde ihtiyaç duyacağını en önemli özellik.</p>
 
+    <h3>Parça Düzeni</h3>
     <p>Parça düzeni yüzdesel oranlarda kararlı genişlik ölçüleri tanımlamanıza yardımcıdır. Ekranı satırlar olarak kurgulamak zorunda değilsiniz. Kap kavramını oturttukça dilediğiniz yönde kurgularınızı oluşturabilirsiniz. Parça düzeni ile oluşturacağınız kaplar nasıl bir özellikte olduğunu anında kendini size gösterecek. Hazırsanız <a href="/belgeler/kap-orgusu/parca-duzeni.html">parça düzeni</a> belgelerini okuyarak ayrıntılı bilgiler edinin.</p>
+
+    <h3>Genleşme Düzeni</h3>
     <p>Genleşme düzenine gelince. Bu düzende yüzdesel oranlarda çalışmaktadır. Ancak html nesnesinin kenarlarından içe veya dışa doğru mesafe koymak istediğinizde hesaplar biraz değişir. Bunun yanı sıra satırsal olarak çalışmalısınız. Yani genleşme düzenini kullanırken bir başka bölüm alttan devam etsin gibi bir isteğiniz olursa farklı yöntemlere başvurmanız gerekecektir. Daha derinlemesine <a href="/belgeler/kap-orgusu/genlesme-duzeni.html">genleşme düzenini</a> inceleyin. Genleşme düzeni ve parça düzeni kıyasına bakmayı unutmayın.</p>
 
+    <h3>Konumlama</h3>
     <p>Konumlama özelliği kap örgüsünün en çok kullanılan özelliğidir. Konumlama çalışmalarınızı yaparken size sunduğu olanakların işinizi ne kadar kolaylaştırdığını görmeniz güç değil. Ayrıntıları incelerken her şeyi ilk seferde fark edeceğinizden konuyu fazla uzatmıyor ve <a href="/belgeler/kap-orgusu/konumlama.html">konumlama sayfasına</a> yönlendiriyoruz.</p>
 
+    <h3>Sıralama</h3>
     <p>Sıralama özelliği kap örgüsünün ilginç bir özelliğidir. Günümüzde display:flex ile gelen özelliklerden biridir. Aslında bunun geçmişi biraz daha uzundur ancak kabul edilir derecede yaygınlaşması nedeniyle birçok kişi için yenidir. Mesela geniş ekranlarda yan yana duran iki nesnenin dar ekranlarda alt alta durmasını sağladınız ama alttaki aslında üstte durmalı diye karar verdiniz. Nasıl yapacaksınız? İşte sıralama özelliği burada yardımınıza koşuyor. Ayrıntılar için <a href="/belgeler/kap-orgusu/siralama.html">sıralama sayfasını</a> inceleyebilirsiniz. </p>
 
 
