--- a/belgeler/kap-orgusu/genlesme-duzeni.html
+++ b/belgeler/kap-orgusu/genlesme-duzeni.html
@@ -38,6 +38,104 @@ title: Kap Örgüsü Genleşme Düzeni
   </code></pre>
   <p></p>
 
+  <h3>Genleşme Düzenini Neden Kullanırız?</h3>
+
+  <p>Öncelikle <a href="/belgeler/kap-orgusu/parca-duzeni.html">parça düzenini</a> hatırlayalım. Parça düzeni yüzdesel olarak kararlı genişlikler tanımlamak için kullanılıyordu. Bu durum nedeniyle genişliğin içine dahil edilen parça genişlikler genişliğin sınırına dayandığında alt taraftan parçalar yer almaya devam ederler. Bu durumu göz önünde bulundurarak genleşme düzenine bakalım. Genleşme düzeni siz ne kadar genleşme kabı tanımlasanız tanımlayın alt satırdan devam etme söz konusu olmayacaktır. Yani her eklediğiniz bir genleşme kabı diğer kaplarla birlikte yeniden hesaplanıp genleşmelerin genişlikleri değişerek aynı satıra sıkışacaktır. Eğer alt satırdan devam eden genleşme kapları oluşturmak istiyorsanız burada 100% genişlikte boş bir parça kabı oluşturmanız gerekir. Böylelikle yeni genleşme kaplarınız alt satırdan devam edebilecektir.  </p>
+  <p>Bunların yanında parça düzeni ile genleşme düzenini iç içe kullanabilirsiniz. Ve yine özel genişliklerinizle birlikte dahi kullanabilirsiniz. Genleşme düzeni bulunduğu yapıya göre kendine bir yer edinecektir. Aşağıdaki karma kullanım örneğini inceleyin.</p>
+  <div data-gnl="1 1p" class="önizleme">
+    <h3>Önizleme</h3>
+    <div data-gnl="1 1p">
+      <div data-gnl="1g">
+        1g
+      </div>
+      <div data-gnl="4g">
+        4g
+      </div>
+      <div data-gnl="2g">
+        2g
+      </div>
+      <div data-gnl="1 1p"></div>
+      <div data-gnl="1g">
+        1g
+      </div>
+      <div data-gnl="4g">
+        4g
+      </div>
+      <div data-gnl="2g">
+        2g
+      </div>
+      <div data-gnl="1g">
+        1g
+      </div>
+      <div data-gnl="4g">
+        4g
+      </div>
+      <div data-gnl="2g">
+        2g
+      </div>
+      <div data-gnl="1 1p"></div>
+      <div data-gnl="1g">
+        1g
+      </div>
+      <div data-gnl="4g">
+        4g
+      </div>
+      <div data-gnl="2g">
+        2g
+      </div>
+      <div data-gnl="1 2p">
+        1 2p
+      </div>
+    </div>
+  </div>
+  <pre data-gnl="1 1p"><code class="language-html">
+&lt;div data-gnl=&quot;1 1p&quot;&gt;
+  &lt;div data-gnl=&quot;1g&quot;&gt;
+    1g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;4g&quot;&gt;
+    4g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;2g&quot;&gt;
+    2g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;&lt;/div&gt;
+  &lt;div data-gnl=&quot;1g&quot;&gt;
+    1g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;4g&quot;&gt;
+    4g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;2g&quot;&gt;
+    2g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;1g&quot;&gt;
+    1g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;4g&quot;&gt;
+    4g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;2g&quot;&gt;
+    2g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;&lt;/div&gt;
+  &lt;div data-gnl=&quot;1g&quot;&gt;
+    1g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;4g&quot;&gt;
+    4g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;2g&quot;&gt;
+    2g
+  &lt;/div&gt;
+  &lt;div data-gnl=&quot;1 2p&quot;&gt;
+    1 2p
+  &lt;/div&gt;
+&lt;/div&gt;
+  </code></pre>
+  <p></p>
+
+
   <h3>Genleşme Ve Parça Düzeni Kıyaslaması</h3>
   <p>Genleşme düzeni ile parça düzeni aynı hesap dengeleriyle oluşturulmamaktadır. Genleşme düzeninde her genleşme birbiri arasında etkileşimli olup, parça düzeninde ise kararlı genişlik oluşturulur. Örnek ile daha iyi anlayalım.</p>
   <p></p>
