--- a/belgeler/kap-orgusu/genlesme-duzeni.html
+++ b/belgeler/kap-orgusu/genlesme-duzeni.html
@@ -54,7 +54,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div data-gnl="1 1p"></div>
+      <div data-gnl="1 1p">(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
       <div data-gnl="1g">
         1g
       </div>
@@ -73,7 +73,7 @@ title: Kap Örgüsü Genleşme Düzeni
       <div data-gnl="2g">
         2g
       </div>
-      <div data-gnl="1 1p"></div>
+      <div data-gnl="1 1p">(bu alan alta geçirmek için oluşturulan 100% genişlik)</div>
       <div data-gnl="1g">
         1g
       </div>
@@ -99,7 +99,7 @@ title: Kap Örgüsü Genleşme Düzeni
   &lt;div data-gnl=&quot;2g&quot;&gt;
     2g
   &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p&quot;&gt;&lt;/div&gt;
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;(bu alan alta geçirmek için oluşturulan 100% genişlik)&lt;/div&gt;
   &lt;div data-gnl=&quot;1g&quot;&gt;
     1g
   &lt;/div&gt;
@@ -118,7 +118,7 @@ title: Kap Örgüsü Genleşme Düzeni
   &lt;div data-gnl=&quot;2g&quot;&gt;
     2g
   &lt;/div&gt;
-  &lt;div data-gnl=&quot;1 1p&quot;&gt;&lt;/div&gt;
+  &lt;div data-gnl=&quot;1 1p&quot;&gt;(bu alan alta geçirmek için oluşturulan 100% genişlik)&lt;/div&gt;
   &lt;div data-gnl=&quot;1g&quot;&gt;
     1g
   &lt;/div&gt;
