--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -9,7 +9,21 @@ konumlarına ve durumlarına müdahale edebilirsiniz.
 
 <h2>data-sekme ve Değiştirgeleri</h2>
 Sekmeler yatay düzende ve dikey düzende kullanabilmek için iki farklı html düzeni bulunur.
-Değiştirgeleri ise şöyledir; sağda, ortada, altta, gergin, yan. <br>Not: "yan" değiştirgesi yan sekme
+Değiştirgeleri ise şöyledir; sağda, ortada, altta, gergin, yan. Aşağıdaki data-sekme değiştirgelerini örneklerde kullandık. Gösterilmeyen diğer değerleri yerel çalışmanızda deneyebilirsiniz. <br><br>
+<pre data-gnl="1 1p"><code class="language-html"><code class="language-html">
+data-sekme=&quot;ortada&quot;
+data-sekme=&quot;sağda&quot;
+data-sekme=&quot;gergin&quot;
+data-sekme=&quot;altta&quot;
+data-sekme=&quot;altta ortada&quot;
+data-sekme=&quot;altta sağda&quot;
+data-sekme=&quot;altta gergin&quot;
+data-sekme=&quot;yan&quot;
+data-sekme=&quot;yan sağda&quot;
+</code></pre>
+
+<br>
+Not: "yan" değiştirgesi yan sekme
 için hazırlanan html düzeninde kullanılır.
 
 <hr>
@@ -160,6 +174,7 @@ için hazırlanan html düzeninde kullanılır.
 &lt;/div&gt;
 </code></pre>
 <!--  yeni sekme örgüsü -->
+<!--
 <div data-sekme data-gnl="1 1p">
 
 
@@ -349,7 +364,7 @@ Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lor
 Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</div>
   </div>
 </div>
-
+-->
 <!-- yeni sekme örgüsü sonu -->
 
 <!--
