--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -10,7 +10,7 @@ konumlarına ve durumlarına müdahale edebilirsiniz.
 <h2>data-sekme ve Değiştirgeleri</h2>
 Sekmeler yatay düzende ve dikey düzende kullanabilmek için iki farklı html düzeni bulunur.
 Değiştirgeleri ise şöyledir; sağda, ortada, altta, gergin, yan. Aşağıdaki data-sekme değiştirgelerini örneklerde kullandık. Gösterilmeyen diğer değerleri yerel çalışmanızda deneyebilirsiniz. <br><br>
-<pre data-gnl="1 1p"><code class="language-html"><code class="language-html">
+<pre data-gnl="1 1p"><code class="language-html">
 data-sekme=&quot;ortada&quot;
 data-sekme=&quot;sağda&quot;
 data-sekme=&quot;gergin&quot;
