--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -30,6 +30,9 @@ data-sekme=&quot;yan sağda&quot;
   Not: "yan" değiştirgesi sekmelerin yanda olması için hazırlanan html kaynağında kullanılır. Varsayılan html kaynağı yatay sekmeler oluşturmak içindir.
 </p>
 <hr>
+
+<a href="/belgeler/uretecler/sekme.html">Sekme oluşturmak için sekme üretecini kullanabilirsiniz.</a>
+
 <h2>Sekme Örnekleri</h2>
 
 <!--  yeni sekme örgüsü -->
