--- a/belgeler/uretecler/sekme.html
+++ b/belgeler/uretecler/sekme.html
@@ -23,6 +23,7 @@ $("#btn1").click(function(){
   });
 });
 </script>
+<div data-gnl="1 1p üstte-ol">
 <button id="btn1">Sekme Oluştur</button>
 <div data-sekme="" data-gnl="1 1p" class="main">
 
@@ -31,3 +32,5 @@ $("#btn1").click(function(){
 &#60;div data-sekme=""&#62;
 <span id="sekmeler"></span>&#60;/div&#62;
 </code></pre>
+
+</div>
