--- a/belgeler/uretecler/sekme.html
+++ b/belgeler/uretecler/sekme.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Sekme Örgüsü
+title: Sekme Üreteci
 ---
 <script type="text/javascript">
 $(document).ready(function(){
