--- a/belgeler/uretecler/sekme.html
+++ b/belgeler/uretecler/sekme.html
@@ -10,7 +10,7 @@ $("#btn1").click(function(){
   var cl = '<input id="im';
   var cl2 ='" type="radio" name="sekme1">'+ "\n";
   var cl3 ='<label for="im';
-  var cl4= '">Sekme Test</label>'+ "\n" +'<div>Burası senin alanın.</div>';
+  var cl4= '">Sekme im'+ ntme +'</label>'+ "\n" +'<div>Burası senin alanın.</div>';
 
   var cla = '&#60;input id="im';
   var cl2a ='" type="radio" name="sekme1"&#62;'+ "\n";
