--- a/belgeler/uretecler/sekme.html
+++ b/belgeler/uretecler/sekme.html
@@ -15,7 +15,7 @@ $("#btn1").click(function(){
   var cla = '&#60;input id="im';
   var cl2a ='" type="radio" name="sekme1"&#62;'+ "\n";
   var cl3a ='&#60;label for="im';
-  var cl4a= '"&#62;Sekme Test&#60;/label&#62;'+ "\n" +'&#60;div&#62;Burası senin alanın.&#60;/div&#62;'+ "\n";
+  var cl4a= '"&#62;Sekme im'+ ntme +'&#60;/label&#62;'+ "\n" +'&#60;div&#62;Burası senin alanın.&#60;/div&#62;'+ "\n";
   var hepsi = cl+ntme+cl2+cl3+ntme+cl4;
   var hepsia = cla+ntme+cl2a+cl3a+ntme+cl4a;
     $(".main").append(hepsi);
