--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -3,8 +3,17 @@ layout: default
 title: İmgelikler
 ---
 
-<span data-imgelik>İmgelik</span>
-<span data-imgelik>5</span>
+<span data-imgelik="birincil kapsül">İmgelik</span>
+  <span data-imgelik="birincil tel kapsül">İmgelik</span><br><br>
 
-<span data-imgelik="kapsül birincil">İmgelik</span>
-<span data-imgelik="kapsül ikincil">5</span>
+  <span data-imgelik="birincil">İmgelik</span>
+  <span data-imgelik="birincil tel">İmgelik</span><br><br>
+  <span data-imgelik="birincil sivri">İmgelik</span>
+  <span data-imgelik="birincil sivri tel">İmgelik</span><br><br>
+  <span data-imgelik="birincil bombe">İmgelik</span>
+  <span data-imgelik="birincil bombe tel">imgelik</span><br><br>
+
+  <span data-imgelik="birincil yuvar">İmgelik</span>
+  <span data-imgelik="birincil yuvar tel">İmgelik</span><br><br>
+  <span data-imgelik="birincil yuvar küçük">İmgelik</span>
+  <span data-imgelik="birincil yuvar tel büyük">İmgelik</span><br><br>
