--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -2,7 +2,7 @@
 layout: default
 title: İmgelikler
 ---
-
+<div>
 <span data-imgelik="birincil kapsül">İmgelik</span>
   <span data-imgelik="birincil tel kapsül">İmgelik</span><br><br>
 
@@ -17,3 +17,4 @@ title: İmgelikler
   <span data-imgelik="birincil yuvar tel">İmgelik</span><br><br>
   <span data-imgelik="birincil yuvar küçük">İmgelik</span>
   <span data-imgelik="birincil yuvar tel büyük">İmgelik</span><br><br>
+</div>
