--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -3,18 +3,27 @@ layout: default
 title: İmgelikler
 ---
 <div>
-<span data-imgelik="birincil kapsül">İmgelik</span>
-  <span data-imgelik="birincil tel kapsül">İmgelik</span><br><br>
+  <span data-imgelik="birincil kapsül">İmgelik</span>
+  <span data-imgelik="birincil tel kapsül">İmgelik</span>
+  <span data-imgelik="birincil sol-kapsül">İmgelik</span>
+  <span data-imgelik="birincil sağ-kapsül">İmgelik</span>
+  <span data-imgelik="birincil tel sol-kapsül">İmgelik</span>
+  <span data-imgelik="birincil tel sağ-kapsül">İmgelik</span>
+
+  <br><br>
 
   <span data-imgelik="birincil">İmgelik</span>
-  <span data-imgelik="birincil tel">İmgelik</span><br><br>
+  <span data-imgelik="birincil tel">imgelik</span><br><br>
+<span data-imgelik="birincil sol-boncuklu">İmgelik</span>
+  <span data-imgelik="birincil kapsül tel sağ-boncuklu">imgelik</span><br><br>
+
+  <span data-imgelik="birincil boncuklu">İmgelik</span>
+  <span data-imgelik="birincil tel boncuklu">imgelik</span><br><br>
   <span data-imgelik="birincil sivri">İmgelik</span>
   <span data-imgelik="birincil sivri tel">İmgelik</span><br><br>
   <span data-imgelik="birincil bombe">İmgelik</span>
   <span data-imgelik="birincil bombe tel">imgelik</span><br><br>
 
-  <span data-imgelik="birincil yuvar">İmgelik</span>
-  <span data-imgelik="birincil yuvar tel">İmgelik</span><br><br>
-  <span data-imgelik="birincil yuvar küçük">İmgelik</span>
-  <span data-imgelik="birincil yuvar tel büyük">İmgelik</span><br><br>
+  <span data-imgelik="birincil yuvarlı">İmgelik</span>
+  <span data-imgelik="birincil yuvarlı tel">İmgelik</span><br><br>
 </div>
