--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -24,6 +24,7 @@ title: İmgelikler
   <span data-imgelik="birincil bombe">İmgelik</span>
   <span data-imgelik="birincil bombe tel">imgelik</span><br><br>
 
-  <span data-imgelik="birincil yuvarlı">İmgelik</span>
-  <span data-imgelik="birincil yuvarlı tel">İmgelik</span><br><br>
+  <span data-imgelik="birincil yuvar">İmgelik</span>
+  <span data-imgelik="birincil yuvar tel">İmgelik</span><br><br>
+
 </div>
