--- a/belgeler/uyarilar.html
+++ b/belgeler/uyarilar.html
@@ -12,7 +12,7 @@ title: Uyarılar
       </div>
       <label for="im1521733043622">•X•</label>
     </div>
-    <input id="im1521733043623" type="checkbox" name="2">
+    <input id="im1521733043623" type="checkbox" name="1">
     <div>
       <div>
         <h2>Uyarı iletisinin başlığı</h2>
@@ -20,13 +20,37 @@ title: Uyarılar
       </div>
       <label for="im1521733043623">•X•</label>
     </div>
-    <input id="im152173304362a" type="checkbox" name="3">
+    <input id="im152173304362a" type="checkbox" name="1">
     <div>
       <div>
         <h2>Uyarı iletisinin başlığı</h2>
         <p>Uyarı iletisi</p>
       </div>
       <label for="im152173304362a">•X•</label>
+    </div>
+    <input id="im152173304362b" type="checkbox" name="1">
+    <div>
+      <div>
+        <h2>Uyarı iletisinin başlığı</h2>
+        <p>Uyarı iletisi</p>
+      </div>
+      <label for="im152173304362b">•X•</label>
+    </div>
+    <input id="im152173304362c" type="checkbox" name="1">
+    <div>
+      <div>
+        <h2>Uyarı iletisinin başlığı</h2>
+        <p>Uyarı iletisi</p>
+      </div>
+      <label for="im152173304362c">•X•</label>
+    </div>
+    <input id="im152173304362d" type="checkbox" name="1">
+    <div>
+      <div>
+        <h2>Uyarı iletisinin başlığı</h2>
+        <p>Uyarı iletisi</p>
+      </div>
+      <label for="im152173304362d">•X•</label>
     </div>
   </div>
   <div>sınamaa</div>
