--- a/belgeler/uyarilar.html
+++ b/belgeler/uyarilar.html
@@ -53,4 +53,24 @@ title: Uyarılar
       <label for="im152173304362d">•X•</label>
     </div>
   </div>
+  <div data-uyarı="kapatılamaz tamamlandı">
+    <input id="tamamlandı" type="checkbox" name="uyarı1">
+    <div>
+      <div>
+        <h2>Uyarı iletisinin başlığı</h2>
+        <p>Uyarı iletisi</p>
+      </div>
+      <label for="tamamlandı">•X•</label>
+    </div>
+  </div>
+  <div data-uyarı="tamamlandı">
+    <input id="tamamlandı2" type="checkbox" name="uyarı1">
+    <div>
+      <div>
+        <h2>Uyarı iletisinin başlığı</h2>
+        <p>Uyarı iletisi</p>
+      </div>
+      <label for="tamamlandı2">•X•</label>
+    </div>
+   </div>
   <div>sınamaa</div>
