--- a/belgeler/uyarilar.html
+++ b/belgeler/uyarilar.html
@@ -4,73 +4,77 @@ title: Uyarılar
 ---
 
 <div data-uyarı="">
-    <input id="im1521733043622" type="checkbox" name="1">
+  <input id="varsayılan" type="checkbox" name="1">
+  <div>
     <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="im1521733043622">•X•</label>
+      <h2>Uyarı iletisinin başlığı</h2>
+      <p>Uyarı iletisi</p>
     </div>
-    <input id="im1521733043623" type="checkbox" name="1">
-    <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="im1521733043623">•X•</label>
-    </div>
-    <input id="im152173304362a" type="checkbox" name="1">
-    <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="im152173304362a">•X•</label>
-    </div>
-    <input id="im152173304362b" type="checkbox" name="1">
-    <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="im152173304362b">•X•</label>
-    </div>
-    <input id="im152173304362c" type="checkbox" name="1">
-    <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="im152173304362c">•X•</label>
-    </div>
-    <input id="im152173304362d" type="checkbox" name="1">
-    <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="im152173304362d">•X•</label>
-    </div>
+    <label for="varsayılan">•X•</label>
   </div>
-  <div data-uyarı="kapatılamaz tamamlandı">
-    <input id="tamamlandı" type="checkbox" name="uyarı1">
+</div>
+<div data-uyarı="kapatılamaz">
+  <input id="kapatılamaz" type="checkbox" name="uyarı1">
+  <div>
     <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="tamamlandı">•X•</label>
+      <h2>Kapatılamaz Uyarı iletisinin başlığı</h2>
+      <p>Uyarı iletisi</p>
     </div>
+    <label for="kapatılamaz">•X•</label>
   </div>
-  <div data-uyarı="tamamlandı">
-    <input id="tamamlandı2" type="checkbox" name="uyarı1">
+</div>
+<div data-uyarı="birincil">
+  <input id="birincil" type="checkbox" name="uyarı1">
+  <div>
     <div>
-      <div>
-        <h2>Uyarı iletisinin başlığı</h2>
-        <p>Uyarı iletisi</p>
-      </div>
-      <label for="tamamlandı2">•X•</label>
+      <p><b>Birincil!</b> Uyarı iletisinin içeriği buraya yazılır.</p>
     </div>
-   </div>
-  <div>sınamaa</div>
+    <label for="birincil">•X•</label>
+  </div>
+</div>
+<div data-uyarı="başarılı">
+  <input id="başarılı" type="checkbox" name="uyarı1">
+  <div>
+    <div>
+      <p><b>Başarılı!</b> Uyarı iletisinin içeriği buraya yazılır.</p>
+    </div>
+    <label for="başarılı">•X•</label>
+  </div>
+</div>
+<div data-uyarı="tehlike">
+  <input id="tehlike" type="checkbox" name="uyarı1">
+  <div>
+    <div>
+      <p><b>Tehlike!</b> Uyarı iletisinin içeriği buraya yazılır.</p>
+    </div>
+    <label for="tehlike">•X•</label>
+  </div>
+</div>
+<div data-uyarı="sorun">
+  <input id="sorun" type="checkbox" name="uyarı1">
+  <div>
+    <div>
+      <p><b>Sorun!</b> Uyarı iletisinin içeriği buraya yazılır.</p>
+    </div>
+    <label for="sorun">•X•</label>
+  </div>
+</div>
+<div data-uyarı="bilgi">
+  <input id="bilgi" type="checkbox" name="uyarı1">
+  <div>
+    <div>
+      <p><b>Bilgi!</b> Uyarı iletisinin içeriği buraya yazılır.</p>
+    </div>
+    <label for="bilgi">•X•</label>
+  </div>
+</div>
+<div data-uyarı="tamamlandı">
+  <input id="tamamlandı" type="checkbox" name="uyarı1">
+  <div>
+    <div>
+      <p><b>Tamamlandı!</b> Uyarı iletisinin içeriği buraya yazılır.</p>
+    </div>
+    <label for="tamamlandı">•X•</label>
+  </div>
+</div>
+<div>sınamaa</div>
