İmgelikler başlık örneği

--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -3,6 +3,26 @@ layout: default
 title: İmgelikler
 ---
 <div>
+  <p>
+    İmgelikler için belgeler ve örnekleri bu sayfada inceleyebilirsiniz.
+  </p>
+
+  <h2>Başlıklarda İmgelik</h2>
+  <p>Bazı durumlarda başlıkların yanına imgelikler eklemek istediğinizde aşağıdaki örnekte olduğu gibi kullanabilirsiniz.</p>
+
+  <div data-gnl="1 1p" class="önizleme">
+    <h3>Önizleme: Başlıklarda imgelik örneği</h3>
+
+    <div>
+      <h1>Bu Bir Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h1>
+    </div>
+
+  </div>
+  <pre data-gnl="1 1p"><code class="language-html">
+  &lt;h1&gt;Bu Bir Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h1&gt;
+  </code></pre>
+</div>
+<div>
   <span data-imgelik="birincil kapsül">İmgelik</span>
   <span data-imgelik="birincil tel kapsül">İmgelik</span>
   <span data-imgelik="birincil sol-kapsül">İmgelik</span>
