--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -14,12 +14,22 @@ title: İmgelikler
     <h3>Önizleme: Başlıklarda imgelik örneği</h3>
 
     <div>
-      <h1>Bu Bir Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h1>
+      <h1>Bu Bir Örnek Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h1>
+      <h2>Bu Bir Örnek Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h2>
+      <h3>Bu Bir Örnek Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h3>
+      <h4>Bu Bir Örnek Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h4>
+      <h5>Bu Bir Örnek Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h5>
+      <h6>Bu Bir Örnek Başlıktır<span data-imgelik="birincil kapsül">YENİ</span></h6>
     </div>
 
   </div>
   <pre data-gnl="1 1p"><code class="language-html">
-  &lt;h1&gt;Bu Bir Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h1&gt;
+  &lt;h1&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h1&gt;
+  &lt;h2&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h2&gt;
+  &lt;h3&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h3&gt;
+  &lt;h4&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h4&gt;
+  &lt;h5&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h5&gt;
+  &lt;h6&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h6&gt;
   </code></pre>
 </div>
 <div>
