--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -31,6 +31,21 @@ title: İmgelikler
   &lt;h5&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h5&gt;
   &lt;h6&gt;Bu Bir Örnek Başlıktır &lt;span data-imgelik="birincil kapsül"&gt;YENİ&lt;/span&gt; &lt;/h6&gt;
   </code></pre>
+
+  <h2>Basmallarda İmgelik</h2>
+  <p>Bazı durumlarda basmalların yanına imgelikler eklemek istediğinizde aşağıdaki örnekte olduğu gibi kullanabilirsiniz.</p>
+
+  <div data-gnl="1 1p" class="önizleme">
+    <h3>Önizleme: Başlıklarda imgelik örneği</h3>
+
+    <div>
+      <button type="button" name="button">Bildirimleri göster <span data-imgelik="birincil">4</span></button>
+    </div>
+
+  </div>
+  <pre data-gnl="1 1p"><code class="language-html">
+  &lt;button type="button" name="button"&gt;Bildirimleri göster &lt;span data-imgelik="birincil"&gt;4&lt;/span&gt;&lt;/button&gt;
+  </code></pre>
 </div>
 <div>
   <span data-imgelik="birincil kapsül">İmgelik</span>
