--- a/belgeler/imgelikler.html
+++ b/belgeler/imgelikler.html
@@ -7,6 +7,35 @@ title: İmgelikler
     İmgelikler için belgeler ve örnekleri bu sayfada inceleyebilirsiniz.
   </p>
 
+  <h2>İmgelik Çeşitleri</h2>
+  <div>
+    <span data-imgelik="birincil kapsül">İmgelik</span>
+    <span data-imgelik="birincil tel kapsül">İmgelik</span>
+    <span data-imgelik="birincil sol-kapsül">İmgelik</span>
+    <span data-imgelik="birincil sağ-kapsül">İmgelik</span>
+    <span data-imgelik="birincil tel sol-kapsül">İmgelik</span>
+    <span data-imgelik="birincil tel sağ-kapsül">İmgelik</span>
+
+    <br><br>
+
+    <span data-imgelik="birincil">İmgelik</span>
+    <span data-imgelik="birincil tel">imgelik</span>
+    <span data-imgelik="birincil sol-boncuklu">İmgelik</span>
+    <span data-imgelik="birincil kapsül tel sağ-boncuklu">imgelik</span>
+    <span data-imgelik="birincil boncuklu">İmgelik</span>
+    <span data-imgelik="birincil tel boncuklu">imgelik</span>
+
+    <br><br>
+
+    <span data-imgelik="birincil sivri">İmgelik</span>
+    <span data-imgelik="birincil sivri tel">İmgelik</span>
+    <span data-imgelik="birincil bombe">İmgelik</span>
+    <span data-imgelik="birincil bombe tel">imgelik</span>
+    <span data-imgelik="birincil yuvar">İmgelik</span>
+    <span data-imgelik="birincil yuvar tel">İmgelik</span>
+
+  </div>
+
   <h2>Başlıklarda İmgelik</h2>
   <p>Bazı durumlarda başlıkların yanına imgelikler eklemek istediğinizde aşağıdaki örnekte olduğu gibi kullanabilirsiniz.</p>
 
@@ -46,30 +75,4 @@ title: İmgelikler
   <pre data-gnl="1 1p"><code class="language-html">
   &lt;button type="button" name="button"&gt;Bildirimleri göster &lt;span data-imgelik="birincil"&gt;4&lt;/span&gt;&lt;/button&gt;
   </code></pre>
-</div>
-<div>
-  <span data-imgelik="birincil kapsül">İmgelik</span>
-  <span data-imgelik="birincil tel kapsül">İmgelik</span>
-  <span data-imgelik="birincil sol-kapsül">İmgelik</span>
-  <span data-imgelik="birincil sağ-kapsül">İmgelik</span>
-  <span data-imgelik="birincil tel sol-kapsül">İmgelik</span>
-  <span data-imgelik="birincil tel sağ-kapsül">İmgelik</span>
-
-  <br><br>
-
-  <span data-imgelik="birincil">İmgelik</span>
-  <span data-imgelik="birincil tel">imgelik</span><br><br>
-<span data-imgelik="birincil sol-boncuklu">İmgelik</span>
-  <span data-imgelik="birincil kapsül tel sağ-boncuklu">imgelik</span><br><br>
-
-  <span data-imgelik="birincil boncuklu">İmgelik</span>
-  <span data-imgelik="birincil tel boncuklu">imgelik</span><br><br>
-  <span data-imgelik="birincil sivri">İmgelik</span>
-  <span data-imgelik="birincil sivri tel">İmgelik</span><br><br>
-  <span data-imgelik="birincil bombe">İmgelik</span>
-  <span data-imgelik="birincil bombe tel">imgelik</span><br><br>
-
-  <span data-imgelik="birincil yuvar">İmgelik</span>
-  <span data-imgelik="birincil yuvar tel">İmgelik</span><br><br>
-
 </div>
