--- a/belgeler/hata.html
+++ b/belgeler/hata.html
@@ -2,30 +2,6 @@
 layout: default
 title: Hata!
 ---
-<div class="ortala" gnl="3 kolon 2p">
-
-  <div gnl="1">1/2p #1</div>
-  <div gnl="1">1/2p #2</div>
-  <div gnl="1">1/2p #3</div>
-  <div gnl="1">1/2p #4</div>
-  <div gnl="1">1/2p #5</div>
-  <div gnl="1">1/2p #6</div>
-  <div gnl="1">1/2p #7</div>
-  <div gnl="1">1/2p #8</div>
-  <div gnl="1">1/2p #9</div>
-  <div gnl="1">1/2p #10</div>
-  <div gnl="1">1/2p #11</div>
-  <div gnl="1">1/2p #12</div>
-  <div gnl="1">1/2p #13</div>
-  <div gnl="1">1/2p #14</div>
-  <div gnl="1">1/2p #15</div>
-  <div gnl="1">1/2p #16</div>
-  <div gnl="1">1/2p #17</div>
-  <div gnl="1">1/2p #18</div>
-  <div gnl="1">1/2p #19</div>
-  <div gnl="1">1/2p #20</div>
-  <div gnl="1">1/2p #21</div>
-  <div gnl="1">1/2p #22</div>
-  <div gnl="1">1/2p #23</div>
-  <div gnl="1">1/2p #24</div>
+<div class="birincil">
+Birincil renk denemesi 1
 </div>
